2004-03-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/diagramtab.py: New File. A tab containing a diagram
	within the main window.
	* A lot of changes to make the diagram tabs work. all actions have
	been changed to support new layout.

2004-03-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* Removed GNOME dependencies from (almost) all of Gaphor
	* gaphor/diagram/actions.py, gaphor/diagram/itemactions.py,
	gaphor/misc/action.py, gaphor/ui/diagramactions.py,
	gaphor/ui/editoractions.py, gaphor/ui/mainactions.py,
	gaphor/ui/menufactory.py, tests/menu.py:
	Introduced new Action structure for menus, toolbars and popups
	* tests/test-association.py, tests/test-diagram.py,
	tests/test-modelelement.py: Added some tests
	* Lots of changes in the ui and diagram department

2004-02-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/consolewindow.py: added

2004-02-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramitem.py: added code so you can easely connect
	to properties like subject.lowerValue.value.
	* gaphor/diagram/association.py, gaphor/diagram/attribute.py,
	gaphor/diagram/feature.py, gaphor/diagram/operation.py:
	makes use of those new features.

2004-01-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* moved model definitions from doc/UML2.gaphor to
	gaphor/UML/uml2.gaphor.
	* setup.py: updated.
	* utils/install_mo.py: fixed some path related stuff so we can do a
	bdist now.
	* utils/genUML2.py: updated to reflect latest changes in the model.

2004-01-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramitem.py: fixed loading.
	* gaphor/diagram/comment.py, association.py, classifier.py,
	feature.py: disable markup for text.

2003-12-31  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/umllex.py: Added parser and renderer for association
	ends.
	* gaphor/diagram/association.py: use the association end parser.

2003-12-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
